# magiceye

./: .gitignore  README.md  TODOs.md  prompt.md  pyproject.toml
src/magiceye/: autostereogram.py  cli.py
tests/: autostereogram_test.py
